[package]
name = "rbn"
version = "0.1.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Ewpratten/rbn"
description = "A small CLI interface to the Reverse Beacon Network, displaying all global network spots in real time as a formatted feed in a terminal"

[[bin]]
path = "src/main.rs"
name = "rbn"

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
regex = "1.4.3"
ctrlc = "3.1.7"
pad = "0.1.6"