[package]
name = "rbn-lib"
version = "0.1.4"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/Ewpratten/rbn"
description = "Access data from the Reverse Beacon Network in real time"

[dependencies]
regex = "1.4.3"
hambands = "0.1.1"
serde = { version = "1.0.125", features = ["derive"] }
